<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@color/txtbackroud"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/name_job"
                android:textColor="@color/txt3" />

            <AutoCompleteTextView
                android:id="@+id/txtnamejob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="2"
                android:ems="10"
                android:hint="@string/hint_job" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/soluong_title"
                android:textColor="@color/txt3" />

            <EditText
                android:id="@+id/txtsoluong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_soluong"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btnsearchrq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_Searchrq" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Chọn Ngành nghề có sẵn"
            android:textColor="@color/txt3" />

        <ListView
            android:id="@+id/lvindustry"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</LinearLayout>
